<resources>
    <string name="app_name">transportation</string>
    <string-array name="from">
        <item>Alexandria"</item>
        <item>"Cairo"</item>
        <item>"Assiut"</item>
        <item>"Aswan"</item>
        <item>"Luxor"</item>
        <item>"Bani Suef"</item>
        <item>"Daqahliya"</item>
        <item>"Giza"</item>
        <item>"Kafr El Sheikh"</item>
        <item>"Marsa Matrouh"</item>
    </string-array>
    <string-array name="To">
        <item>Alexandria"</item>
        <item>"Cairo"</item>
        <item>"Assiut"</item>
        <item>"Aswan"</item>
        <item>"Luxor"</item>
        <item>"Bani Suef"</item>
        <item>"Daqahliya"</item>
        <item>"Giza"</item>
        <item>"Kafr El Sheikh"</item>
        <item>"Marsa Matrouh"</item>
    </string-array>
    <string-array name="TimeOut">
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"12"</item>
        <item>"9"</item>
        <item>"11"</item>
        <item>"4"</item>
    </string-array>
    <string-array name="ArriveTime">
        <item>"3"</item>
        <item>"5"</item>
        <item>"5"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"3"</item>
        <item>"2"</item>
        <item>"4"</item>
        <item>"1"</item>
        <item>"3"</item>
    </string-array>
    <string name="app">task22</string>
    <string name="frist_text">Transportation</string>
    <string name="second_text">Book your trip</string>
    <string name="NAME">Name:</string>
    <string name="FROM">From:</string>
    <string name="TO">To:</string>
    <string name="price">Price:</string>
    <string name="first_Button">+</string>
    <string name="second_button">Bus</string>
    <string name="rese">reset</string>
    <string name="submit" />
    <string name="Submit">Submit</string>

    <string name="my_text">Transportation</string>
    <string name="first_button">Train</string>
    <string name="Bus">-</string>
    <string name="BookYourTicket">Book your trip</string>
    <string name="travel">Traveling</string>
    <string name="journey">Start a new journey</string>


</resources>