<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TicketsReservation">
    
        

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="409dp"
            android:layout_height="59dp"
            android:background="@color/Offred"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/frist_text"
                android:textColor="@color/Silver"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BookYourTicket"
                android:textColor="@color/Silver"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="329dp"
            android:layout_height="179dp"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="41dp"
            android:layout_marginBottom="352dp"
            android:background="@color/purple_500"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.804">

            <LinearLayout
                android:layout_width="290dp"
                android:layout_height="46dp"
                android:background="@color/purple_700"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="79dp"
                    android:layout_height="42dp"
                    android:text="@string/NAME"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:text="yehia hassanain"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="262dp"
                android:layout_height="45dp"
                android:background="@color/purple_700"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="82dp"
                    android:layout_height="match_parent"
                    android:text="@string/FROM"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="153dp"
                    android:layout_height="wrap_content"
                    android:text="cairo"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@color/purple_700"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="85dp"
                    android:layout_height="match_parent"
                    android:text="@string/TO"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
                    android:text="alex"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="249dp"
                android:layout_height="40dp"
                android:background="@color/purple_700"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="93dp"
                    android:layout_height="match_parent"
                    android:background="@color/purple_700"
                    android:text="@string/price"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="31dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/purple_500"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="196dp"
            android:layout_height="35dp"
            android:layout_marginTop="83dp"
            android:layout_marginBottom="260dp"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/button"
            android:layout_width="50dp"
            android:layout_height="51dp"
            android:background="@drawable/counter_btn"
            android:backgroundTint="@color/Offred"
            android:gravity="bottom|center"
            android:text="@string/Bus"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.617"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.37"
            app:rippleColor="@color/white" />

        <Button
            android:id="@+id/button2"
            android:layout_width="53dp"
            android:layout_height="51dp"
            android:background="@drawable/counter_btn"
            android:backgroundTint="@color/Offred"
            android:gravity="bottom|center"
            android:text="@string/first_Button"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.885"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.379"
            app:rippleColor="@color/Silver" />

        <Button
            android:id="@+id/btnTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/submit_btn"
            android:backgroundTint="@color/Offred"
            android:text="@string/rese"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.206" />

        <Button
            android:id="@+id/btnBus"
            android:layout_width="141dp"
            android:layout_height="43dp"
            android:background="@drawable/submit_btn"
            android:backgroundTint="@color/Offred"
            android:text="@string/Submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTrain"
            app:layout_constraintVertical_bias="0.141" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="165dp"
            android:layout_height="30dp"
            android:background="@color/purple_700"
            android:gravity="center"
            android:text="45856565"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBus" />

    </androidx.constraintlayout.widget.ConstraintLayout>

