<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20sp"
    tools:context=".ChooseTrainOrBus">



        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="410dp"
            android:layout_height="102dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="96dp"
            android:background="@color/Offred"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my_text"
                android:textColor="@color/Silver"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_text"
                android:textColor="@color/Silver"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="131dp"
            android:layout_height="44dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="108dp"
            android:fontFamily="sans-serif"
            android:text="@string/travel"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="152dp"
            android:text="@string/journey"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="171dp"
            android:layout_height="96dp"
            android:layout_marginTop="96dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.933"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:srcCompat="@drawable/first_image" />

        <LinearLayout
            android:layout_width="405dp"
            android:layout_height="168dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="124dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <androidx.cardview.widget.CardView
                android:layout_width="188dp"
                android:layout_height="145dp"
                android:layout_margin="10sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="159dp"
                        android:layout_height="86dp"
                        android:layout_marginLeft="15sp"
                        android:layout_marginRight="15sp"
                        android:paddingLeft="10sp"
                        android:paddingTop="5sp"
                        android:paddingRight="10sp"
                        android:scrollbarAlwaysDrawHorizontalTrack="false"
                        app:srcCompat="@drawable/train2" />

                    <Button
                        android:id="@+id/btnTrain"
                        android:layout_width="129dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30sp"
                        android:layout_marginTop="90sp"
                        android:layout_marginRight="30sp"
                        android:backgroundTint="@color/Offred"
                        android:padding="10sp"
                        android:text="@string/first_button"
                        android:textColor="@color/Silver" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:padding="10sp">

                <Button
                    android:id="@+id/btnBus"
                    android:layout_width="133dp"
                    android:layout_height="51dp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="90sp"
                    android:layout_marginRight="20sp"
                    android:backgroundTint="@color/Offred"
                    android:padding="10sp"
                    android:text="@string/second_button"
                    android:textColor="@color/Silver" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="87dp"
                    app:srcCompat="@drawable/vehicles" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

